--- a/client/src/app/Pages/post-details/post-details.component.html
+++ b/client/src/app/Pages/post-details/post-details.component.html
@@ -29,7 +29,7 @@
                 <div *ngFor="let comment of comments" class="bg-white shadow-md mt-4">
                     <div class="p-4">
                         <p>{{ comment.comment }}</p>
-                        <p class="text-right italic">-{{comment?.userId?.name}}</p>
+                        <p class="text-right italic text-sm">-{{comment?.userId?.name}}</p>
                     </div>
                 </div>
             </ng-container>
