--- a/client/src/app/Components/header/header.component.html
+++ b/client/src/app/Components/header/header.component.html
@@ -24,7 +24,7 @@
                         </li>
                         <li>
                             <input type="search" id="search" placeholder="Search post" [(ngModel)]="searchText"
-                                (keyup)="onSearch()"
+                                (input)="onSearch()"
                                 class="bg-gray-700 border border-gray-600 rounded-md py-1 px-3 text-white focus:outline-none focus:ring focus:border-blue-300" />
                         </li>
                     </ul>
