Admin changes and session expire handling

--- a/client/src/app/AdminPanel/Components/admin/admin.component.html
+++ b/client/src/app/AdminPanel/Components/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="flex h-full">
     <!-- Side panel -->
     <app-side-panel [isSidePanelOpen]="isSidePanelOpen"></app-side-panel>
     <!-- Main area -->
