--- a/client/src/app/AdminPanel/Pages/users/users.component.html
+++ b/client/src/app/AdminPanel/Pages/users/users.component.html
@@ -54,11 +54,20 @@
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <!-- User email -->
-                    <div class="text-sm text-gray-900">{{user?.email}}</div>
+                    <div class="text-sm text-gray-900">{{user?.active}}</div>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
+                    <label class="inline-flex items-center cursor-pointer">
+                        <input (change)="onActiveDeactiveToggle($event, user?._id)" type="checkbox"
+                            [checked]="user?.active" class="sr-only peer">
+                        <div
+                            class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600">
+                        </div>
+                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"></span>
+                    </label>
+
                     <!-- Edit and Delete buttons -->
-                    <button class="text-indigo-600 hover:text-indigo-900 mr-2" (click)="updateUser(user)">
+                    <button class="text-indigo-600 hover:text-indigo-900 mr-2" (click)="onUserDetails(user?._id)">
                         <i class="fa fa-edit text-lg"></i>
                     </button>
                     <button class="text-red-600 hover:text-red-900" (click)="deleteUserIconClicked(user?._id)">
