--- a/client/src/app/Components/new-feed/new-feed.component.html
+++ b/client/src/app/Components/new-feed/new-feed.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
     <div class="md:flex md:justify-between md:items-center">
-        <h1 class="text-3xl font-bold mb-4">Blogs Count ({{posts?.length}})</h1>
+        <h1 class="text-3xl font-bold mb-4">Blogs Count ({{posts.length}})</h1>
     </div>
 
     <div class="md:flex md:flex-wrap">
