--- a/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
+++ b/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
@@ -41,7 +41,7 @@
         </canvas>
     </div>
     <div class="w-1/2 bg-white m-4 rounded-lg p-7 shadow-md flex justify-center">
-        <canvas baseChart [type]="'pie'" [datasets]="pieChartDatasets" [labels]="pieChartLabels"
+        <canvas baseChart [type]="'pie'" [datasets]="postPieChartDatasets" [labels]="postPieChartLabels"
             [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
         </canvas>
     </div>
