--- a/client/src/app/AdminPanel/Pages/posts/posts.component.html
+++ b/client/src/app/AdminPanel/Pages/posts/posts.component.html
@@ -13,15 +13,15 @@
                 </th>
                 <th scope="col"
                     class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                    Name
+                    Title
                 </th>
                 <th scope="col"
                     class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                    Email
+                    Content
                 </th>
                 <th scope="col"
                     class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                    Status
+                    Created At
                 </th>
                 <th scope="col"
                     class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
@@ -40,17 +40,17 @@
                     <div class="flex items-center justify-center">
                         <div>
                             <!-- User name -->
-                            <div class="text-sm font-medium text-gray-900">{{post?.title}}</div>
+                            <div class="text-sm font-medium text-gray-900">{{post?.title | titlecase}}</div>
                         </div>
                     </div>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <!-- User email -->
-                    <div class="text-sm text-gray-900">{{post?.category}}</div>
+                    <div class="text-sm text-gray-900">{{post?.categoryId?.categoryTitle || '-'}}</div>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <!-- User email -->
-                    <div class="text-sm text-gray-900">{{post?.userId?.name}}</div>
+                    <div class="text-sm text-gray-900">{{post?.createdAt | date:'medium'}}</div>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
                     <!-- Edit and Delete buttons -->
