--- a/client/src/app/Pages/signin/signin.component.html
+++ b/client/src/app/Pages/signin/signin.component.html
@@ -9,16 +9,23 @@
                         <input type="text" id="username"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter email" formControlName="email" />
+                            <div *ngIf="signInForm.get('email')?.invalid && signInForm.get('email')?.touched">
+                                <div class="text-red-500 text-sm" *ngIf="signInForm.get('email')?.errors?.['required']">Email is required</div>
+                                <div class="text-red-500 text-sm" *ngIf="signInForm.get('email')?.errors?.['email']">Invalid email address</div>
+                            </div>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Enter Password</label>
                         <input type="password" id="password"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter password" formControlName="password" />
+                            <div *ngIf="signInForm.get('password')?.invalid && signInForm.get('password')?.touched">
+                                <div class="text-red-500 text-sm" *ngIf="signInForm.get('password')?.errors?.['required']">Password is required</div>
+                            </div>
                     </div>
                     <div class="text-center">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
-                            type="submit">Login</button>
+                            type="submit" [disabled]="!signInForm.valid">Login</button>
                     </div>
                     <p class="text-center mt-4 text-gray-400 hover:text-gray-800"><a
                             routerLink="/forget-password">Forgot password</a></p>
