--- a/client/src/app/Components/post/post.component.html
+++ b/client/src/app/Components/post/post.component.html
@@ -4,7 +4,7 @@
         <div class="text-gray-700">{{(post?.content.length > 100 ? post?.content.slice(0, 100) + '...' :
             post?.content)}}</div>
         <div class="mt-4">
-            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer"
                 (click)="onReadMore(post?._id)">Read More</a>
             <button *ngIf="loggedUserId === post?.userId?._id"
                 class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-2"
