--- a/client/src/app/Components/post/post.component.html
+++ b/client/src/app/Components/post/post.component.html
@@ -1,8 +1,9 @@
 <div class="border-0 shadow mt-3">
     <div class="p-4">
-        <h2 class="text-xl font-semibold">{{post?.title}}</h2>
-        <div class="text-gray-700">{{(post?.content.length > 100 ? post?.content.slice(0, 100) + '...' :
-            post?.content)}}</div>
+        <span
+            class="inline-flex items-center rounded-md bg-purple-50 px-2 py-1 text-xs font-medium text-purple-700 ring-1 ring-inset ring-purple-700/10 mb-2">{{post?.categoryId?.categoryTitle}}</span>
+        <h2 class="text-xl font-semibold">{{post?.title | titlecase}}</h2>
+        <div class="text-gray-700" [innerHTML]="(post?.content && post?.content.length > 100) ? (post?.content.slice(0, 200) + '...') : (post?.content)"></div>
         <div class="mt-4">
             <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer"
                 (click)="onReadMore(post?._id)">Read More</a>
