--- a/client/src/app/Pages/post-details/post-details.component.html
+++ b/client/src/app/Pages/post-details/post-details.component.html
@@ -6,11 +6,11 @@
 
     <div class="mt-8">
         <div class="md:w-full">
-            <div class="bg-white shadow-md p-6">
+            <div class="bg-white shadow-md py-6 px-8">
                 <span
                     class="inline-flex items-center rounded-md bg-purple-50 px-2 py-1 text-xs font-medium text-purple-700 ring-1 ring-inset ring-purple-700/10">{{postDetails?.categoryId?.categoryTitle}}</span>
                 <p class="text-sm text-gray-600">{{postDetails?.post?.category}}</p>
-                <h2 class="text-xl font-semibold mt-4">{{postDetails?.title | titlecase}}</h2>
+                <h1 class="text-2xl font-semibold mt-4">{{postDetails?.title | titlecase}}</h1>
                 <div class="image-container mt-4 flex justify-center items-center">
                     <img [src]="getImageUrl(postDetails?.image)" alt="" class="w-full max-h-[300px]">
                 </div>
@@ -19,7 +19,7 @@
                         class="font-semibold text-blue-500 hover:underline">{{postDetails?.userId?.name |
                         titlecase}}</a> on <span class="font-semibold">{{postDetails?.createdAt |
                         date:'mediumDate'}}</span></p>
-                <div class="mt-4">{{postDetails?.content}}</div>
+                <div class="mt-4" [innerHTML]="postDetails?.content"></div>
             </div>
         </div>
 
