--- a/client/src/app/Pages/forgot-password/forgot-password.component.html
+++ b/client/src/app/Pages/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
     <div class="mt-4">
-        <div class="w-full md:w-1/2 mx-auto">
+        <div class="lg:w-1/3 md:w-1/2 mx-auto sm:w-full">
             <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
                 <h3 class="text-xl font-semibold mb-4">Get Reset Link on Email</h3>
                 <form [formGroup]="forgetForm">
@@ -9,10 +9,14 @@
                         <input type="text" id="username"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter email" formControlName="email" />
+                            <div *ngIf="forgetForm.get('email')?.invalid && forgetForm.get('email')?.touched">
+                                <div class="text-red-500 text-sm" *ngIf="forgetForm.get('email')?.errors?.['required']">Email is required</div>
+                                <div class="text-red-500 text-sm" *ngIf="forgetForm.get('email')?.errors?.['email']">Invalid email address</div>
+                            </div>
                     </div>
                     <div class="text-center">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
-                            type="submit" (click)="submitHandler()">Forgot Password</button>
+                            type="submit" (click)="submitHandler()" [disabled]="!forgetForm.valid">Forgot Password</button>
                     </div>
                 </form>
             </div>
