--- a/client/src/app/Pages/signup/signup.component.html
+++ b/client/src/app/Pages/signup/signup.component.html
@@ -5,28 +5,39 @@
                 <h3 class="text-xl font-semibold mb-4">SignUp</h3>
                 <form [formGroup]="signUpForm" (ngSubmit)="submitForm()">
                     <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Enter Name</label>
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Name</label>
                         <input type="text" id="name"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter name" formControlName="name" />
-                        <!-- <div class="text-red-500 text-sm mt-1" *ngIf="error.error?.response?.data?.name">{{
-                            error.error?.response?.data?.name }}</div> -->
+                        <div *ngIf="signUpForm.get('name')?.invalid && signUpForm.get('name')?.touched">
+                            <div class="text-red-500 text-sm" *ngIf="signUpForm.get('name')?.errors?.['required']">
+                                Name is required
+                            </div>
+                        </div>
                     </div>
                     <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Enter Email</label>
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email</label>
                         <input type="email" id="email"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter email" formControlName="email" />
-                        <!-- <div class="text-red-500 text-sm mt-1" *ngIf="error.error?.response?.data?.email">{{
-                            error.error?.response?.data?.email }}</div> -->
+                        <div *ngIf="signUpForm.get('email')?.invalid && signUpForm.get('email')?.touched">
+                            <div class="text-red-500 text-sm" *ngIf="signUpForm.get('email')?.errors?.['required']">
+                                Email is required</div>
+                            <div class="text-red-500 text-sm" *ngIf="signUpForm.get('email')?.errors?.['email']">Invalid
+                                email address</div>
+                        </div>
                     </div>
                     <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Enter Password</label>
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Password</label>
                         <input type="password" id="password"
                             class="block w-full rounded-md border-0 py-1.5 pl-4 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
                             placeholder="Enter password" formControlName="password" />
-                        <!-- <div class="text-red-500 text-sm mt-1" *ngIf="error.error?.response?.data?.password">{{
-                            error.error?.response?.data?.password }}</div> -->
+                        <div *ngIf="signUpForm.get('password')?.invalid && signUpForm.get('password')?.touched">
+                            <div class="text-red-500 text-sm" *ngIf="signUpForm.get('password')?.errors?.['required']">
+                                Password is required
+                            </div>
+                            <div class="text-red-500 text-sm" *ngIf="signUpForm.get('password')?.errors?.['minlength']">Password should have a minimum length of 6 characters.</div>
+                        </div>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm font-bold mb-2" for="about">About</label>
@@ -36,9 +47,9 @@
                         <!-- <div class="text-red-500 text-sm mt-1" *ngIf="error.error?.response?.data?.about">{{
                             error.error?.response?.data?.about }}</div> -->
                     </div>
-                    <div class="text-center flex justify-evenly">
+                    <div class="flex justify-evenly mx-8">
                         <button class="bg-gray-800 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded"
-                            type="submit">Register</button>
+                            type="submit" [disabled]="!signUpForm.valid">Register</button>
                         <button class="bg-gray-400 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded"
                             type="reset" (click)="resetData()">Reset</button>
                     </div>
