Admin post details view and API and other fixes

--- a/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
+++ b/client/src/app/AdminPanel/Pages/admin-home/admin-home.component.html
@@ -30,7 +30,7 @@
         <i class="fa fa-comments text-2xl"></i>
         <!-- Text -->
         <div>Comments</div>
-        <div class="font-bold text-sky-400 text-lg">{{20}}</div>
+        <div class="font-bold text-sky-400 text-lg">{{commentCount}}</div>
     </div>
 </div>
 
