--- a/client/src/app/Components/header/header.component.html
+++ b/client/src/app/Components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4">
         <div class="flex items-center justify-between h-16">
             <div class="flex-shrink-0">
-                <a class="text-white" routerLink="/">MyBlog</a>
+                <a class="text-white text-2xl" routerLink="/"><i class="fa fa-blog pr-2"></i>MyBlogs</a>
             </div>
             <div class="md:hidden">
                 <button class="text-white focus:outline-none focus:text-white">
@@ -33,8 +33,8 @@
                     <ul class="flex space-x-4">
                         <ng-container *ngIf="isLoggedIn; else notLoggedIn">
                             <li>
-                                <a class="text-white" href="" *ngIf="userData?.name"
-                                    [routerLink]="'/user/' + userData?._id">{{ userData?.name }}</a>
+                                <a class="text-white" href="" *ngIf="userName || userData"
+                                    [routerLink]="'/user/' + userData?._id">{{userName ? userName : userData?.name }}</a>
                             </li>
                             <li>
                                 <a class="text-white" href="" (click)="doLogout()">Logout</a>
