--- a/client/src/app/Pages/add-post/add-post.component.html
+++ b/client/src/app/Pages/add-post/add-post.component.html
@@ -8,6 +8,12 @@
                     <input type="text" id="title" name="title" class="form-control"
                         class="border border-solid border-gray-300 rounded-lg w-full p-2" placeholder="Title"
                         formControlName="title" (change)="fieldChange($event)" />
+                    <div *ngIf="addPostForm.get('title')?.invalid && addPostForm.get('title')?.touched">
+                        <div class="text-red-500 text-sm" *ngIf="addPostForm.get('title')?.errors?.['required']">Title is required
+                        </div>
+                        <div class="text-red-500 text-sm" *ngIf="addPostForm.get('title')?.errors?.['minlength']">Title should have min 10 chars
+                        </div>
+                    </div>
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="content">Content</label>
@@ -19,6 +25,13 @@
                     <!-- <ngx-quill #editor [modules]="modules" (contentChanged)="logChange($event);"></ngx-quill> -->
                     <!-- <textarea name="content" class="border border-solid border-gray-300 rounded-lg w-full p-2"
                         formControlName="content" id="" cols="30" rows="10"></textarea> -->
+                        <div *ngIf="addPostForm.get('content')?.invalid && addPostForm.get('content')?.touched">
+                            <div class="text-red-500 text-sm" *ngIf="addPostForm.get('content')?.errors?.['required']">Content is required
+                            </div>
+                            <div class="text-red-500 text-sm" *ngIf="addPostForm.get('content')?.errors?.['minlength']">Content should have min 50
+                                chars
+                            </div>
+                        </div>
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="image">Select Banner Image</label>
@@ -33,10 +46,14 @@
                         <option *ngFor="let category of categories" [value]="category?._id">
                             {{category.categoryTitle}}</option>
                     </select>
+                    <div *ngIf="addPostForm.get('categoryName')?.invalid && addPostForm.get('categoryName')?.touched">
+                        <div class="text-red-500 text-sm" *ngIf="addPostForm.get('categoryName')?.errors?.['required']">Category is required
+                        </div>
+                    </div>
                 </div>
                 <div class="text-center">
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-                        type="submit">Create Post</button>
+                        type="submit" [disabled]="!addPostForm.valid">Create Post</button>
                 </div>
             </form>
         </div>
